Reduce StatsCounter font size on mobile for overflow fixes

--- a/barium-academy/src/index.css
+++ b/barium-academy/src/index.css
@@ -895,6 +895,10 @@ h6 {
     grid-template-columns: repeat(2, 1fr);
   }
 
+  .stat-number {
+    font-size: 2.3rem;
+  }
+
   .stat-item:nth-child(2) {
     border-right: none;
   }
